# Mod3D

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: api.rst  conf.py  environment.yaml  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: Adaptor.rst  BRep.rst  BRepBuilderAPI.rst  BRepExtrema.rst  BRepFillet.rst  BRepGProp.rst  BRepLib.rst  BRepOffsetAPI.rst  BRepPrim.rst  BRepTools.rst  BooleanOp.rst  Geom.rst  Geom2d.rst  GeomAPI.rst  GeomAbs.rst  GeomFill.rst  Render.rst  ShapeAnalysis.rst  ShapeFix.rst  ShapeUpgrade.rst  StepControl.rst  StepData.rst  TopAbs.rst  TopExp.rst  TopoDS.rst  gp.rst  index.rst  visualyse3js.rst
docs/tutorials/: index.rst  usage_examples.ipynb
examples/: create_box.py  examples.ipynb  usage_examples.ipynb  visualize_mesh.ipynb
inc/: heal.hxx
python/mod3d/: __init__.py  visualyse3js.py
recipies/: conda_build_config.yaml  recipe.yaml
src/: array_utils.hpp  bindAdaptor.cpp  bindBRep.cpp  bindBRepBooleanOp.cpp  bindBRepBuilderAPI.cpp  bindBRepFillet.cpp  bindBRepGProp.cpp  bindBRepOffsetAPI.cpp  bindBRepPrim.cpp  bindBRepPrimAPIOneAxis.cpp  bindBRepTools.cpp  bindBrepExtrema.cpp  bindBrepPrimAPI.cpp  bindGeom.cpp  bindGeom2d.cpp  bindGeom2dCurves.cpp  bindGeom2dCurvesConics.cpp  bindGeom2dCurvesSplines.cpp  bindGeomAPI.cpp  bindGeomAbs.cpp  bindGeomCurves.cpp  bindGeomCurvesConics.cpp  bindGeomCurvesSplines.cpp  bindGeomFill.cpp  bindGeomSurfaces.cpp  bindGeomSurfacesSplines.cpp  bindGp.cpp  bindRender.cpp  bindShapeAnalysis.cpp  bindShapeFix.cpp  bindShapeUpgrade.cpp  bindShapes.cpp  bindStepControl.cpp  bindStepData.cpp  bindTopExp.cpp  bindTopoDS.cpp  bind_brep.cpp  bind_brep_boolean_op.cpp  bind_brep_builder_api.cpp  bind_brep_extrema.cpp  (+30 more)
src/extend/: ExtremaUtils.cpp  ExtrudeCut.cpp  ExtrudeCut.hpp  GbsConverters.cpp  OcctContainers.hpp  RevolveCut.cpp  RevolveCut.hpp  TessellationUtils.cpp  TopologyUtils.cpp  TopologyUtils.hpp  UnionFaces.hpp  array_utils.hpp  explorer_utils.hpp  shapes.cpp
src/extend/brep/: ExtrudeCut.cpp  ExtrudeCut.hpp  RevolveCut.cpp  UnionFaces.cpp
src/extend/containers/: OcctContainers.hpp
src/extend/extrema/: ExtremaUtils.cpp  ExtremaUtils.hpp
src/extend/gbs/: GbsConverters.cpp  GbsConverters.hpp
src/extend/geometry/: GeomSurfaceCompare.cpp
src/extend/render/: TessellationUtils.hpp
src/extend/topology/: Shapes.hpp  TopologyUtils.cpp  shapes.cpp
stubs/mod3d/: Adaptor.pyi  BRep.pyi  BRepBuilderAPI.pyi  BRepExtrema.pyi  BRepFillet.pyi  BRepGProp.pyi  BRepLib.pyi  BRepOffsetAPI.pyi  BRepPrim.pyi  BRepTools.pyi  BooleanOp.pyi  Geom.pyi  Geom2d.pyi  GeomAPI.pyi  GeomAbs.pyi  GeomFill.pyi  Render.pyi  ShapeAnalysis.pyi  ShapeFix.pyi  ShapeUpgrade.pyi  StepControl.pyi  StepData.pyi  TopAbs.pyi  TopExp.pyi  TopoDS.pyi  __init__.pyi  gp.pyi
studies/: assembly.step  endo.step  endoscocpes.ipynb  filet2d.step  fillets2d.ipynb  keep_out_zones.ipynb
tests/: test_adaptor.py  test_boolean_ops.py  test_brep_gprop.py  test_brepbuilderapi.py  test_brepextrema.py  test_fillet2d.py  test_geom.py  test_geom2d.py  test_geom_api.py  test_gp.py  test_render.py  test_shape_analysis.py  test_shape_fix.py  test_step_control.py  test_topo_ds.py
tests/cpp/: test_union_faces.cpp
